--- a/roles/advbook-16.04.yml
+++ b/roles/advbook-16.04.yml
@@ -1,7 +1,7 @@
 - name: deployrole
-  hosts: advertise-16.04
+  hosts: advertise
   remote_user: ubuntu
   become: yes
  
   roles:
-  - advertise
+  - advertise-16.04
